# clift

./: Cargo.toml  README.md  clift.nix  flake.nix  install.nsi  install.sh
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml  test.yml
dev/: upload.md
src/: error.rs  lib.rs  main.rs
src/api/: commit_upload.rs  initiate_upload.rs  mod.rs
src/commands/: github_helper.rs  mod.rs  upload.rs  utils.rs
src/utils/: call_api.rs  get_local_files.rs  get_site_name_from_ftd.rs  github_token.rs  mod.rs  uploader.rs
