[package]
name = "clift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastn-observer = { git = "https://github.com/fastn-stack/fastn-observer", rev = "47b29ea" }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
clap = "4"
rusty-hook = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
